I add Kazakh language

--- a/resources/lang/kz.json
+++ b/resources/lang/kz.json
@@ -1,3 +1,11 @@
 {
-    "Name": "Есіміңіз"
+    "Name": "Есіміңіз",
+    "Laravel": "Ләрәуел",
+    "Register": "Тіркелу",
+    "Login": "Кіру",
+    "Forgot Your Password?": "Құпия сөзді ұмыттыңыз ба?",
+    "Remember Me": "Есте сақтау",
+    "E-Mail Address": "Электронды пошта",
+    "Password": "Құпия сөз",
+    "Confirm Password": "Құпия сөзді растаңыз"
 }
